--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/luckyduckys/multitude#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.6",
+    "mongoose-encryption": "^2.0.3"
   }
 }
