--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
   "homepage": "https://github.com/luckyduckys/multitude#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "lodash": "^4.17.20",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^5.11.8",
     "mongoose-encryption": "^2.0.3",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
